Inicio de marcação de atendimento, mas tá foda